# GasSeger

./: .gitignore  CMakeLists.txt  CMakePresets.json
GasSeger/: CMakeLists.txt  Calc.cpp  GasSeger.cpp  GasSeger.h
GasSeger/include/on_nurbs/: fitting_curve_pdm.h
GasSeger/src/on_nurbs/: on_nurbs.cmake
PartViewer/: CMakeLists.txt  PartsViewer.cpp
ReCon/: CMakeLists.txt  NurbsFit.cpp
ReCon/src/on_nurbs/: fitting_curve_2d_apdm.cpp  fitting_curve_pdm.cpp
